<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/details_back"
    android:layout_height="wrap_content"
    tools:context="com.movies.venka.popularmovies.DetailsActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="@dimen/background_height"
        android:contentDescription="@string/background"
        android:id="@+id/backdrop"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin"
        android:orientation="horizontal">
    <ImageView
        android:layout_width="100dp"
        android:layout_marginLeft="20dp"
        android:layout_height="150dp"
        android:contentDescription="@string/poster"
        android:id="@+id/poster_view"
        />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
            android:layout_weight="1">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/showTitle"
            android:textSize="20sp"
            android:layout_marginLeft="@dimen/margin"
            android:layout_marginTop="@dimen/margin"
            android:text="@string/title"/>
            <ImageView
                android:layout_width="23dp"
                android:layout_height="23dp"
                android:layout_marginRight="@dimen/margin"
                android:layout_alignParentBottom="true"
                android:id="@+id/favourite"
                android:layout_alignParentRight="true"
                android:src="@drawable/notfavourite" />
        </RelativeLayout>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/release_date"
                android:layout_marginLeft="@dimen/margin"
                android:layout_marginTop="@dimen/margin"
                android:text="@string/release_date"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginTop="@dimen/margin"
                    android:src="@drawable/star" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:id="@+id/rating"
                android:layout_marginTop="@dimen/margin"
                android:text="@string/user_rating"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:text="@string/overview"
        android:textSize="20sp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/synopsis"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:text="Trailers"
            android:textSize="20sp"/>

        <ListView
            android:id="@+id/list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="none"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:text="Reviews"
            android:textSize="20sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/review"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"/>
    </LinearLayout>
</ScrollView>
